--- a/Digitalmedia/index.html
+++ b/Digitalmedia/index.html
@@ -73,7 +73,7 @@
 
         <div
           id="menu"
-          class="hidden bg-color-primary-dark h-[100vh] absolute inset-0"
+          class="hidden bg-color-primary-dark h-[100vh] absolute inset-0 trans"
         >
           <ul class="h-full grid place-items-center py-20">
             <li>
@@ -696,7 +696,7 @@
                   <h4 class="font-bold text-lg">Newsletter</h4>
                   <p class="leading-relaxed">Subcribe With Email And loads Of News Will Be Sent To You</p>
                   <div class="flex items-center pb-4">
-                    <input type="text" class="3/4 text-color-gray bg-white p-2 lg:p-3 rounded-l-md focus:outline-none" placeholder="Enter Your Email">
+                    <input type="text" class="w-full text-color-gray bg-white p-2 lg:p-3 rounded-l-md focus:outline-none" placeholder="Enter Your Email">
                     <button type="submit" class="bg-color-secondary px-4 py-2 lg:px-5 lg:py-3 rounded-r-md hover:opacity-90">
                       <i class="fa-solid fa-chevron-right"></i>
                     </button>
